# bytes-browser

./: .env.template  .gitignore  .prettierrc  README.md  codegen.yml  index.html  package.json  package.old  run-build.sh  run-dev.sh  set-version.js  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1693341054167-9d7f2bd61226d.mjs
crates/enforce-single-instance/: Cargo.toml
crates/enforce-single-instance/src/: error.rs  lib.rs
src/: App.tsx  graphql.tsx  main.tsx
src-tauri/: Cargo.toml  clippy.sh  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: archiver.rs  commands.rs  encryption.rs  main.rs  search.rs
src-tauri/src/account/: accounts.rs
src-tauri/src/app/: tags.rs
src-tauri/src/filesystem/: audio.rs  cache.rs  explorer.rs  git_utils.rs  mod.rs  utils.rs  volume.rs
src-tauri/src/themes/: mod.rs  provider.rs
src/components/: CommandBuilderModal.tsx  ContextMenu.tsx  Device.tsx  Login.tsx  NoInternetFeature.tsx  PageContextMenu.tsx  Register.tsx  Router.tsx  RouterLayout.tsx  SearchModal.tsx  SidebarBookmarks.tsx  SidebarBottom.tsx  SidebarTags.tsx  SmartFileIcon.tsx  TimeText.tsx
src/components/settings/: SettingsAbout.tsx  SettingsAccount.tsx  SettingsNew.tsx  SettingsPerformance.tsx  SettingsProfiles.tsx
src/lib/: commands.tsx  constants.ts  types.ts
src/lib/emitters/: bookmarks.emitter.ts  commands.emitter.ts  directory.emitter.ts  runtime.emitter.ts  tags.emitter.ts
src/lib/graphql/: client.tsx
src/lib/graphql/mutations/: register.graphql
src/lib/graphql/queries/: getSubscriptionStatus.graphql  getTheme.graphql  getThemes.graphql  getUser.graphql  login.graphql
src/lib/hooks/: useTimer.tsx
src/lib/state/: currentContext.state.ts  pasteboard.state.ts  runtime.state.ts  stateCache.state.ts  theme.state.ts
src/lib/themes/: loader.ts
src/lib/utils/: formChecker.ts  formatBytes.ts  formatLongText.ts  generateUUID.ts  getMountPointFromPathName.ts  getRandomHex.ts  getVersion.ts  removeAllAfterLastSlash.ts  removeLastCharOf.ts  secondsToTime.ts  secondsToTimestamp.ts
src/pages/: Auth.tsx  Commands.tsx  FolderExplorer.tsx  Settings.tsx  Tags.tsx
src/styles/: index.scss
