[package]
name = "bytes-browser"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "shell-all", "os-all", "window-maximize", "window-unminimize", "window-unmaximize", "window-hide", "window-minimize", "window-start-dragging", "window-close", "window-show", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.8"
window-shadows = "0.2.1"
lru = "0.11.0"
lazy_static = "1.4.0"
rayon = "1.7.0"
fs_extra = "1.3.0"
tokio = { version = "1.32.0", features = ["full"] }
notify = "6.1.0"
serde_bencode = "0.2.3"
walkdir = "2.3.3"
zstd = "0.12.4"
dirs = "5.0.1"
bincode = "1.3.3"
futures = "0.3.28"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
jsonwebtoken = "8.3.0"
graphql_client = "0.13.0"
open = "5.0.0"
thiserror = "1.0.47"
fuzzy-matcher = "0.3.7"
sys-info = "0.9.1"
image = "0.24.7"
base64 = "0.21.3"
hound = "3.5.0"
minimp3 = "0.5.1"
git2 = "0.18.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
